--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -1,22 +1,17 @@
 button,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
-	border: 1px solid;
-	border-color: $color__border-button;
-	border-radius: 3px;
+input[type="submit"],
+.button {
+	padding: modular_scale(0);
 	background: $color__background-button;
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6em 1em .4em;
+	color: $color__text-button;
+	text-transform: uppercase;
+	text-decoration: none;
 
-	&:hover {
-		border-color: $color__border-button-hover;
-	}
-
-	&:active,
-	&:focus {
-		border-color: $color__border-button-focus;
+	#{$link-hover-selector} {
+		background: $color__brand-01-variant-dark;
+		color: $color__background-button;
+		font-weight: bold;
 	}
 }
