--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,72 +1,41 @@
 .main-navigation {
-	clear: both;
 	display: block;
-	float: left;
 	width: 100%;
 
 	ul {
 		display: none;
-		list-style: none;
 		margin: 0;
-		padding-left: 0;
+		padding: 0;
+		list-style: none;
 
-		ul {
-			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-			float: left;
-			position: absolute;
-			top: 100%;
-			left: -999em;
-			z-index: 99999;
+		@include mq($tablet) {
+			&.nav-menu {
+				display: flex;
 
-			ul {
-				left: -999em;
-				top: 0;
-			}
-
-			li {
-				&:hover > ul,
-				&.focus > ul {
-					left: 100%;
+				li {
+					flex: 1;
 				}
 			}
 
-			a {
-				width: 200px;
+			&.sub-menu {
+				display: block;
+
+				li {
+					float: right;
+					padding-left: modular_scale(1);
+				}
 			}
-
-			:hover > a,
-			.focus > a {
-			}
-
-			a:hover,
-			a.focus {
-			}
-		}
-
-		li:hover > ul,
-		li.focus > ul {
-			left: auto;
-		}
-	}
-
-	li {
-		float: left;
-		position: relative;
-
-		&:hover > a,
-		&.focus > a {
 		}
 	}
 
 	a {
 		display: block;
+		font-size: modular_scale(1);
 		text-decoration: none;
 	}
 
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a,
-	.current-menu-ancestor > a {
+	.icon-link .icon {
+		font-size: modular_scale(1);
 	}
 }
 
@@ -74,14 +43,15 @@
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
-}
 
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
+	@include mq($tablet) {
 		display: none;
 	}
-	.main-navigation ul {
-		display: block;
+}
+
+@include mq($tablet) {
+	.menu-toggle {
+		display: none;
 	}
 }
 
