--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -3,3 +3,25 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+@font-face {
+    font-family: 'icons';
+    src: url('./fonts/icons.woff2') format('woff2'),
+         url('./fonts/icons.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+.icon-link {
+    text-decoration: none;
+    .icon {
+        font-family: 'icons';
+
+        &.icon-design:before { content: '\e804'; } /* '' */
+        &.icon-project-management:before { content: '\e806'; } /* '' */
+        &.icon-github:before { content: '\f09b'; } /* '' */
+        &.icon-development:before { content: '\f121'; } /* '' */
+        &.icon-arrow:before { content: '\f13a'; } /* '' */
+        &.icon-linkedin:before { content: '\f319'; } /* '' */
+    }
+}
