--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,5 @@
 body.home {
     header {
-        .custom-logo {
-            display: none;
-        }
-
         .main-navigation {
             li.menu-item-102 {
                 display: none;
@@ -19,8 +15,7 @@ body.home {
                 display: block;
                 position: absolute;
                 top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                transform: translateY(-50%);
                 width: 100%;
 
                 .section-heading {
@@ -52,6 +47,17 @@ body.home {
                 }                
             }
 
+            .scroll-down {
+                display: block;
+                position: absolute;
+                left: 50%;
+                bottom: 0;
+                transform: translateX(-50%);
+                padding-bottom: modular_scale(2);
+                font-size: modular_scale(2);
+                color: $color__text-med-light;
+            }
+
         }
 
         .featured-projects {
@@ -59,81 +65,6 @@ body.home {
                 margin: 0;
                 padding: 0;
                 list-style: none;
-            }
-
-            .featured-project {
-                min-height: 100vh;
-
-                .content {
-                    display: flex;
-                    width: 100%;
-
-                    aside {
-                        margin-right: modular_scale(2);
-                    }
-
-                    .content-section {
-                        flex: 1;
-
-                        &.text,
-                        &.text-hover {
-                            margin: modular_scale(1) 0;
-                        }
-
-                        &.text {
-                            text-transform: uppercase;
-                        }
-
-                        &.text-hover {
-                            display: none;
-                        }
-
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-
-                        h2, h3 {
-                            margin: 0;
-                            line-height: 1;
-                        }
-
-                        .overview {
-                            margin-bottom: modular_scale(2);
-
-                            .project-title {
-                                font-size: modular_scale(3);
-                            }
-
-                            .project-type {
-                                font-size: modular_scale(2);
-                            }
-                        }
-
-                        .tools {
-                            h3 {
-                                font-size: modular_scale(1);
-                            }
-
-                            .tools-list{
-                                display: flex;
-                                flex-wrap: wrap;
-
-                                .tool-type {
-                                    color: #{$color__text-med-light};
-                                    width: modular_scale(1);
-                                }
-                                
-                                .tool {
-                                    margin-right: modular_scale(0);
-                                }
-                            }
-
-
-                        }
-                    }
-                }
             }
         }
     }
